Fix a bunch of KVM alignment issues
This patchset does 3 things:
1. Removes some dead code in kvm controller, and kvm.scss that was
unused, but left over from the demo app.
2. Causes the KVM to properly resize to smaller viewports, and avoid the
incredibly lame scroll bars that show up when you have a browser window
that's smaller than the x resolution of your system.
3. Top aligns the viewport in the bootstrap container, which is more
desirable.

Negatives:
1. It uses an internal novnc interface to get access to the screen
element, and modify its style slightly.  to my knowlege, there is no way
to do this through an external facing API, and novncs choice of flex
layout conflicts with our existing CSS.
2. You end up with a vertical scroll bar in the browser session due to a
hardcoded max height css property.  In a perfect world, novnc would
publish a way to get the VNC resolution, and we could programatically
set the height of the upper container.

Overall, I think these are reasonable tradeoffs to make, and it makes
the KVM much more responsive.

Tested:
Launched the KVM at various resolutions in an ubuntu system.  Resized
chrome window to various resolutions and observed the KVM window shows
responsive attributes that looked correct.
Rebooted host system with KVM still connected to verify resolution and
feature changes did not crash KVM.

--- a/app/server-control/styles/kvm.scss
+++ b/app/server-control/styles/kvm.scss
@@ -1,11 +1,7 @@
-
-.noNVC_shown {
-  display: inline;
-}
-.noVNC_hidden {
-  display: none;
-}
-
-#noVNC_left_dummy_elem {
-  flex: 1;
+#noVNC_container {
+  // Theoretically this is the max Y resolution we can support
+  // This is a little bit of a hack, because we don't really know the viewport
+  // size until KVM is actually connected, and novnc relies on the upper
+  // container to bound its size.
+  height: 1200px;
 }
